- Fixed weired behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)
- Fixed a safe_mode bypass in cURL identified by Maksymilian Arciemowicz.
  (Ilia)
- Fixed a bug with PDO::FETCH_COLUMN|PDO::FETCH_GROUP mode when a column # by
  which to group by data is specified. (Ilia)
- Upgraded PCRE to version 7.6 (Nuno)

- Fixed bug #44046 (crash inside array_slice() function with an invalid
  by-ref offset). (Ilia)
- Fixed bug #44028 (crash inside stream_socket_enable_crypto() when enabling
  encryption without crypto type). (Ilia)
- Fixed bug #44018 (RecursiveDirectoryIterator options inconsistancy). (Marcus)
- Fixed bug #43954 (Memory leak when sending the same HTTP status code
  multiple times). (Scott)
- Fixed bug #43927 (koi8r is missing from html_entity_decode()).
  (andy at demos dot su, Tony)
- Fixed faulty fix for bug #40189 (endless loop in zlib.inflate stream filter).
  (Greg)
- Fixed bug #43912 (Interbase column names are truncated to 31 characters).
  (Ilia)
- Fixed bug #43875 (Two error messages returned for $new and $flag argument
  in mysql_connect()). (Hannes)
- Fixed bug #43863 (str_word_count() breaks on cyrillic "ya" in locale cp1251).
  (phprus at gmail dot com, Tony)
- Fixed bug #43808 (date_create never fails (even when it should)). (Derick)
- Fixed bug #43793 (zlib filter is unable to auto-detect gzip/zlib file headers).
  (Greg)
- Fixed bug #43703 (Signature compatibility check broken). (Dmitry)
- Fixed bug #43663 (Extending PDO class with a __call() function doesn't work).
  (David Soria Parra)
- Fixed bug #43647 (Make FindFile use PATH_SEPARATOR instead of ";"). (Ilia)
- Fixed bug #43635 (mysql extension ingores INI settings on NULL values
  passed to mysql_connect()). (Ilia)
- Fixed bug #43620 (Workaround for a bug inside libcurl 7.16.2 that can result
  in a crash). (Ilia)
- Fixed bug #43606 (define missing depencies of the exif extension).
  (crrodriguez at suse dot de)